--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "archin",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rodmba.github.io/react-ant-app/",
   "dependencies": {
     "antd": "^2.13.11",
     "mirror-creator": "^1.1.0",
@@ -13,20 +14,25 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "serve": "^6.5.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-app-rewired start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "npm-run-all -p watch-css",
     "build-js": "react-app-rewired build",
     "build": "npm-run-all build-css build-js",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
     "eslint": "node_modules/.bin/eslint .",
     "precommit": "npm-run-all eslint",
-    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
+    "eslint-check":
+      "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
@@ -37,6 +43,7 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.5.1",
+    "gh-pages": "^1.1.0",
     "husky": "^0.14.3",
     "prettier": "^1.8.2",
     "react-addons-test-utils": "^15.6.2",
