--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Arch&In",
-  "name": "Arch & In",
+  "short_name": "App-name",
+  "name": "App-name",
   "icons": [
     {
       "src": "favicon.ico",
